# proiect-ml-denistatar24

./: app.py  main.py  pyproject.toml
notebooks/: clasificare.ipynb  model_dt.pkl  model_ebm.pkl  model_xgb.pkl  regresie.ipynb  regresie.md
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/clasificare_files/modele/: model_cat.pkl  model_ebm.pkl  model_lr.pkl  model_nb.pkl  model_xgb.pkl  scaler_stroke.pkl
notebooks/regresie_files/modele/: model_cat.pkl
